--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 .content-1 p {
   width: 85%;
   padding-top: 3rem;
-  font-size: clamp(16px, 1.5vw, 3vw);
+  font-size: 16px;
   font-weight: 400;
   -webkit-animation-duration: 0.75s;
           animation-duration: 0.75s;
@@ -101,7 +101,7 @@ body {
   padding-top: 0.65rem !important;
   padding-bottom: 1.55rem !important;
   width: 85%;
-  font-size: 2.3vw;
+  font-size: 26px;
   font-weight: 500;
 }
 
