--- a/style.scss
+++ b/style.scss
@@ -72,7 +72,7 @@ body {
 .content-1 p {
   width: 85%;
   padding-top: 3rem;
-  font-size: clamp(16px, 1.5vw, 3vw);
+  font-size: 16px;
   font-weight: 400;
   animation-duration: 0.75s;
   animation-delay: 0.8s;
@@ -93,7 +93,7 @@ body {
   padding-top: 0.65rem !important;
   padding-bottom: 1.55rem !important;
   width: 85%;
-  font-size: 2.3vw;
+  font-size: 26px;
   font-weight: 500;
 }
 
