--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 .content-1 p {
   width: 85%;
   padding-top: 3rem;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   -webkit-animation-duration: 0.75s;
           animation-duration: 0.75s;
@@ -101,7 +101,7 @@ body {
   padding-top: 0.65rem !important;
   padding-bottom: 1.55rem !important;
   width: 85%;
-  font-size: 26px;
+  font-size: 28px;
   font-weight: 500;
 }
 
@@ -202,14 +202,14 @@ body {
 
 .picture-1 {
   width: 65%;
-  -webkit-box-shadow: 0 0 32px black;
-          box-shadow: 0 0 32px black;
+  -webkit-box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
+          box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
 }
 
 .picture-2 {
   width: 65%;
-  -webkit-box-shadow: 0 0 32px black;
-          box-shadow: 0 0 32px black;
+  -webkit-box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
+          box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
 }
 
 .container-1 h2,
