--- a/style.scss
+++ b/style.scss
@@ -72,7 +72,7 @@ body {
 .content-1 p {
   width: 85%;
   padding-top: 3rem;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   animation-duration: 0.75s;
   animation-delay: 0.8s;
@@ -93,7 +93,7 @@ body {
   padding-top: 0.65rem !important;
   padding-bottom: 1.55rem !important;
   width: 85%;
-  font-size: 26px;
+  font-size: 28px;
   font-weight: 500;
 }
 
@@ -188,12 +188,12 @@ body {
 
 .picture-1 {
   width: 65%;
-  box-shadow: 0 0 32px black;
+  box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
 }
 
 .picture-2 {
   width: 65%;
-  box-shadow: 0 0 32px black;
+  box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
 }
 
 
