--- a/style.css
+++ b/style.css
@@ -1007,6 +1007,9 @@ form label {
     background-color: black;
     background-attachment: unset;
   }
+  .carousel-caption p {
+    display: none;
+  }
   .content {
     border-radius: 5px;
     position: relative;
