--- a/style.scss
+++ b/style.scss
@@ -1118,6 +1118,16 @@ background-position-x: 45%;
   left: -5%;
 }
 
+.grid-1 {
+  margin-top: 32px;
+}
+
+.contactpage1 {
+  width: 115% !important;
+  position: relative;
+  left: -12.5%;
+}
+
   .contact-hero {
       background-attachment: unset;
 
@@ -1128,7 +1138,7 @@ background-position-x: 45%;
       position: relative;
       top: 5vw;
       font-weight: 700;
-      left: 2rem !important;
+      left: 5.5rem !important;
   }
 
   .text-center {
