--- a/style.css
+++ b/style.css
@@ -970,6 +970,33 @@ form label {
   color: black !important;
 }
 
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-transition: height 500ms, background 500ms;
+  transition: height 500ms, background 500ms;
+}
+
+.logo {
+  width: 140%;
+  -webkit-transition: all 0.5s ease !important;
+  transition: all 0.5s ease !important;
+}
+
+.header.tiny {
+  max-height: 61.5px;
+  color: #fff;
+}
+
+.tiny .logo {
+  width: auto !important;
+  height: 40px !important;
+  -webkit-transition: all 0.618s ease -0.1s !important;
+  transition: all 0.618s ease -0.1s !important;
+}
+
 @media screen and (max-width: 290px) {
   .logo-main {
     width: 100%;
@@ -994,6 +1021,11 @@ form label {
   form.text-center {
     padding: 20px !important;
   }
+}
+
+.view {
+  width: 61.8%;
+  margin: auto;
 }
 
 @media screen and (max-width: 768px) {
@@ -1217,7 +1249,8 @@ form label {
     font-size: 25vw !important;
   }
   .navbar {
-    background-color: #3b3b3b !important;
+    background-color: #1b1b1b !important;
+    max-height: unset;
   }
 }
 
