--- a/style.scss
+++ b/style.scss
@@ -148,6 +148,7 @@ body {
   text-decoration: none;
   color: white;
   position: relative;
+  border-radius: 5px;
 }
 
 #mybtn:hover {
@@ -173,6 +174,8 @@ body {
   padding: 3vw;
   position: relative;
   right: 12vw;
+  border-radius: 5px;
+
 }
 
 
@@ -183,17 +186,23 @@ body {
   padding: 3vw;
   position: relative;
   left: 12vw;
+  border-radius: 5px;
+
 
 }
 
 .picture-1 {
   width: 65%;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
+  border-radius: 5px;
+
 }
 
 .picture-2 {
   width: 65%;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.521);
+  border-radius: 5px;
+
 }
 
 
@@ -317,6 +326,7 @@ h3 {
   background-color: #3f3f3f;
   padding: 1rem;
   border: 1px solid black;
+  border-radius: 5px;
   position: relative;
   top: 0;
   animation-duration: 0.75s;
@@ -947,6 +957,24 @@ form {
   
 }
 
+.carousel {
+  margin-top: 5rem;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  display: none;
+}
+
+.carousel-caption {
+  width: 20%;
+  margin: auto;
+  h3 {
+    border: 1px solid black;
+    border-radius: 4px;
+  }
+}
+
 .view {
   width: 61.8%;
   
@@ -1103,6 +1131,10 @@ background-position-x: 45%;
       width: 90% !important;
   }
 
+  #contact-form {
+    left: 0 !important;
+  }
+
   .contact-background {
       width: 115% !important;
       margin-left: -7.5%;
@@ -1138,9 +1170,12 @@ background-position-x: 45%;
   .blog-1,
 .blog-2,
 .blog-3 {
-  width: 90vw;
-  position: relative;
-  left: -5%;
+  width: 100%;
+}
+
+.blogcontainer {
+  display: flex;
+  align-items: center;
 }
 
 .grid-1 {
