--- a/style.scss
+++ b/style.scss
@@ -51,31 +51,30 @@ body {
 
 
 
-.content-1 {
-  padding: 11vw 0 15vw 0;
-}
+
 
 .content {
   border-radius: 5px;
   position: relative;
   color: #f1f1f1;
   width: 40%;
-  height: 23vw;
   padding: 0.3vw;
+  min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  left: 4.25%;
-  display: flex;
+  justify-content: center;
+  margin-left: 3rem;
 }
 
-.content-1 p {
+.content p {
   width: 85%;
   padding-top: 3rem;
   font-size: 18px;
   font-weight: 400;
   animation-duration: 0.75s;
   animation-delay: 0.8s;
+  margin: auto;
 }
 
 .content1-h1 {
@@ -106,7 +105,6 @@ body {
   animation-duration: 0.75s;
   animation-delay: 0.6s;
   padding-top: 1.2rem;
-  position: relative;
 }
 
 .btn-1 {
@@ -126,7 +124,6 @@ body {
 }
 
 .btn-2 {
-  margin-left: 7.2px;
   color: white !important;
   font-weight: 400;
   background-color: transparent !important;
@@ -147,7 +144,6 @@ body {
   background-color: #444343;
   text-decoration: none;
   color: white;
-  position: relative;
   border-radius: 5px;
 }
 
@@ -324,8 +320,10 @@ h3 {
   width: 30%;
   animation-duration: 1s;
   background-color: #3f3f3f;
-  padding: 1rem;
+  padding: 1rem 1rem 3rem 1rem;
   border: 1px solid black;
+  clip-path: polygon(100% 0, 100% 75%, 50% 100%, 0 75%, 0 0);
+
   border-radius: 5px;
   position: relative;
   top: 0;
@@ -719,6 +717,10 @@ ul li {
   margin-top: 20px;
 }
 
+.homepagecontact {
+  width: 100% !important;
+}
+
 .blog1-img,
 .blog2-img,
 .blog3-img {
@@ -999,12 +1001,10 @@ background-position-x: 45%;
       position: relative;
       color: #f1f1f1;
       width: 100%;
-      height: 23vw;
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
-      margin-top: -15%;
-      left: 0;
+      margin: auto;
   }
 
   .content h1 {
@@ -1014,12 +1014,10 @@ background-position-x: 45%;
 
   .content-1 p {
     font-size: 16px;
-    padding-top: 5rem !important;
   }
 
   .content h2 {
       font-size: 7.5vw;
-      padding-bottom: 3rem !important;
       font-weight: 600;
   }
 
@@ -1029,7 +1027,6 @@ background-position-x: 45%;
 
 
   .content-1 {
-      padding: 48vw 0 75vw 0;
   }
 
   .flex-buttons {
@@ -1129,6 +1126,7 @@ background-position-x: 45%;
 
   .contact-page-1 {
       width: 90% !important;
+      margin-left: 5%;
   }
 
   #contact-form {
@@ -1218,6 +1216,10 @@ background-position-x: 45%;
       left: 7.5vw;
   }
 
+  .content2 h2 {
+    margin-bottom: 2rem;
+  }
+
   .cryptocurrencies {
       flex-flow: column nowrap;
       align-items: center;
@@ -1225,6 +1227,14 @@ background-position-x: 45%;
 
   .cryptocurrencies i {
       font-size: 25vw !important;
+  }
+
+  .cryptocurrencies a {
+    margin-bottom: 2rem;
+  }
+
+  .view {
+    width: 100%;
   }
   
   .navbar {
@@ -1241,52 +1251,41 @@ background-position-x: 45%;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
     padding-bottom: 50px;
       background-attachment: unset;
   }
 
   .content {
-    position: relative;
-    margin-top: -25%;
-    width: 95%;
+    width: 90%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    
     h1 {
       font-size: 5rem;
+      width: 100%;
     }
     h2 {
       font-size: 3rem;
+      width: 100%;
     }
     p {
-      width: 65%;
-      font-size: 1rem;
-      margin-left: -18%;
+      width: 100%;
+      font-size: 2rem;
     }
+    .flex-buttons {
+      width: 100%;
+    }
+    
   }
 
   #mybtn {
     font-size: 2.618rem;
     min-width: 18rem;
-    position: relative;
-    left: -18.25%;
+    width: 100%;
 }
 
 .btn-2 {
-  position: relative;
-  left: -5.5rem !important;
 }
 
   .blog-hero {
@@ -1313,7 +1312,7 @@ background-position-x: 45%;
 }
 
 
-@media screen and (max-width:4000px)  {
+@media screen and (max-width:4000px) and (min-width: 1950px) {
   .picture-2 {
       max-height: 5000px;
   }
@@ -1322,7 +1321,9 @@ background-position-x: 45%;
       max-width: 5000px;
   }
 }
-
+.icon-box {
+  padding-bottom: 5vw;
+}
 .view img {
   max-height: 85vh !important;  
 }
