--- a/style.scss
+++ b/style.scss
@@ -65,16 +65,17 @@ body {
   align-items: center;
   justify-content: center;
   margin-left: 3rem;
+  min-width: 500px;
 }
 
 .content p {
-  width: 85%;
   padding-top: 3rem;
   font-size: 18px;
   font-weight: 400;
   animation-duration: 0.75s;
   animation-delay: 0.8s;
   margin: auto;
+  width: 85%;
 }
 
 .content1-h1 {
@@ -100,11 +101,11 @@ body {
 
 .flex-buttons {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
   animation-duration: 0.75s;
   animation-delay: 0.6s;
   padding-top: 1.2rem;
+  width: 85%;
+  margin: 0;
 }
 
 .btn-1 {
