--- a/style.scss
+++ b/style.scss
@@ -1023,7 +1023,9 @@ background-position-x: 45%;
   i {
       font-size: 15vw !important;
   }
-
+  .icon-box {
+    clip-path: none;
+  }
 
   .content-1 {
   }
