--- a/style.scss
+++ b/style.scss
@@ -1011,8 +1011,9 @@ background-position-x: 45%;
       padding: 0 !important;
   }
 
-  .content-1 p {
+  .content p {
     font-size: 16px;
+    display: none;
   }
 
   .content h2 {
