--- a/style.css
+++ b/style.css
@@ -1179,15 +1179,12 @@ form label {
             animation: none !important;
   }
   .contact-page-1 {
-    width: 90% !important;
-    margin-left: 5%;
+    width: 100% !important;
+    margin: auto;
+    padding: 1rem !important;
   }
   #contact-form {
     left: 0 !important;
-  }
-  .contact-background {
-    width: 115% !important;
-    margin-left: -7.5%;
   }
   .btn-block {
     margin-left: 0 !important;
@@ -1228,11 +1225,6 @@ form label {
   }
   .grid-1 {
     margin-top: 32px;
-  }
-  .contactpage1 {
-    width: 115% !important;
-    position: relative;
-    left: -12.5%;
   }
   .contact-hero {
     background-attachment: unset;
